# Mood-Light

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.bash  toolchain.cmake
auxiliary/: patterns.json
iOS-App/: .gitignore
iOS-App/Mood Light/: AppDelegate.swift  Mood Light-Bridging-Header.h  PatternTableViewCell.swift  PatternTableViewController.swift  UITextField+Extensions.swift  UIViewControllerId-Protocol.swift
iOS-App/Mood Light.xcodeproj/: project.pbxproj
iOS-App/Mood Light/Assets.xcassets/AppIcon.appiconset/: Contents.json
iOS-App/Mood Light/Base.lproj/: Main.storyboard
iOS-App/Mood Light/Chirp/ChirpConnect.framework/: Info.plist
iOS-App/Mood Light/Chirp/ChirpConnect.framework/Headers/: ChirpConnect.h  ChirpConnectDefines.h  chirp_connect.h  chirp_connect_callbacks.h  chirp_connect_errors.h  chirp_connect_version.h
iOS-App/Mood Light/Chirp/ChirpConnect.framework/Modules/: module.modulemap
iOS-App/Mood Light/ChromaColorPicker/: ChromaColorPicker.swift
iOS-App/Mood Light/PatternViewControllers/: CandlePatternViewController.swift  DuetPatternViewController.swift  EmptyPatternViewController.swift  FastLEDPatternViewController.swift  HsvPatternViewController.swift  RainbowWheelPatternViewController.swift  RandomPatternViewController.swift  SineRainbowPatternViewController.swift  UniformPatternViewController.swift  WavePatternViewController.swift  WhiteLightPatternViewController.swift
iOS-App/Mood Light/StoryBoards/: Candle.storyboard  Duet.storyboard  Empty.storyboard  FastLED.storyboard  FastLED.temp_caseinsensitive_rename.storyboard  Hsv.storyboard  RainbowWheel.storyboard  Random.storyboard  SineRainbow.storyboard  Uniform.storyboard  Wave.storyboard  WhiteLight.storyboard
include/: credentials.h  helpers.h  myLogger.h  mySemaphore.h  pattern.h  patternHandler.h  ringBuffer.h
include/patterns/: candlePattern.h  decodeFailedPattern.h  duetPattern.h  emptyPattern.h  errorPattern.h  fastLedRainbowPattern.h  hsvPattern.h  rainbowWheelPattern.h  randomPattern.h  sineRainbowPattern.h  transitionPattern.h  uniformPattern.h  wavePattern.h  whiteLightPattern.h
lib/chirp/include/: chirp_connect.h  chirp_connect_callbacks.h  chirp_connect_errors.h  chirp_connect_states.h  chirp_sdk_defines.h
lib/fftw3/lib/: libfftw3f.la
lib/fftw3/lib/cmake/fftw3/: FFTW3fConfig.cmake
lib/fftw3/lib/pkgconfig/: fftw3f.pc
lib/matrix-hal/: CMakeLists.txt
lib/pigpio/: CMakeLists.txt
lib/wiringPi/: CMakeLists.txt
src/: helpers.cpp  mySemaphore.cpp  patternHandler.cpp  ringBuffer.cpp
src/patterns/: candlePattern.cpp  decodeFailedPattern.cpp  duetPattern.cpp  emptyPattern.cpp  errorPattern.cpp  fastLedRainbowPattern.cpp  hsvPattern.cpp  rainbowWheelPattern.cpp  randomPattern.cpp  sineRainbowPattern.cpp  transitionPattern.cpp  uniformPattern.cpp  wavePattern.cpp  whiteLightPattern.cpp
